added dialog for custom messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
         <item>Food was great!</item>
         <item>Type a funny message</item>
     </string-array>
+    <string name="cancel">Cancel</string>
+    <string name="ok">Ok</string>
 </resources>
