fixed the hint for the custom message dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Family Phone Booth</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="custom_message">Message</string>
     <string name="message">Message</string>
     <string-array name="message_array">
         <item>Congrats to the new couple</item>
