updated launch configuration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Family Phone Booth</string>
+    <string name="app_name">Event Booth</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="custom_message">Message</string>
